--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="To fulfill the homework requirements for Into to Programming Fall/2013 - TJ Nicolaides">
+    <meta name="description" content="To fulfill the homework requirements for Intro to Programming Fall/2013 - TJ Nicolaides">
     <meta name="author" content="Kerry Wargo">
     <link rel="shortcut icon" href="ico/favicon.png">
 
