--- a/project.html
+++ b/project.html
@@ -28,81 +28,10 @@
     <script src="js/project.js"></script> 
     <script type="text/javascript" src="js/apigee.js"></script>
     <script type="text/javascript" src="js/zebra_datepicker.src.js"></script>
-
     
-  <script>
-  $(function() {
-    var tabTitle = $( "#tab_title" ),
-      tabContent = $( "#tab_content" ),
-      tabTemplate = "<li><a href='#{href}'>#{label}</a> <span class='ui-icon ui-icon-close' role='presentation'>Remove Tab</span></li>",
-      tabCounter = 2;
- 
-    var tabs = $( "#tabs" ).tabs();
- 
-    // modal dialog init: custom buttons and a "close" callback reseting the form inside
-    var dialog = $( "#dialog" ).dialog({
-      autoOpen: false,
-      modal: true,
-      buttons: {
-        Add: function() {
-          addTab();
-          $( this ).dialog( "close" );
-        },
-        Cancel: function() {
-          $( this ).dialog( "close" );
-        }
-      },
-      close: function() {
-        form[ 0 ].reset();
-      }
-    });
- 
-    // addTab form: calls addTab function on submit and closes the dialog
-    var form = dialog.find( "form" ).submit(function( event ) {
-      addTab();
-      dialog.dialog( "close" );
-      event.preventDefault();
-    });
- 
-    // actual addTab function: adds new tab using the input from the form above
-    function addTab() {
-      var label = tabTitle.val() || "Tab " + tabCounter,
-        id = "tabs-" + tabCounter,
-        li = $( tabTemplate.replace( /#\{href\}/g, "#" + id ).replace( /#\{label\}/g, label ) ),
-        tabContentHtml = tabContent.val() || "Tab " + tabCounter + " content.";
- 
-      tabs.find( ".ui-tabs-nav" ).append( li );
-      tabs.append( "<div id='" + id + "'><p>" + tabContentHtml + "</p></div>" );
-      tabs.tabs( "refresh" );
-      tabCounter++;
-    }
- 
-    // addTab button: just opens the dialog
-    $( "#add_tab" )
-      .button()
-      .click(function() {
-        dialog.dialog( "open" );
-      });
- 
-    // close icon: removing the tab on click
-    tabs.delegate( "span.ui-icon-close", "click", function() {
-      var panelId = $( this ).closest( "li" ).remove().attr( "aria-controls" );
-      $( "#" + panelId ).remove();
-      tabs.tabs( "refresh" );
-    });
- 
-    tabs.bind( "keyup", function( event ) {
-      if ( event.altKey && event.keyCode === $.ui.keyCode.BACKSPACE ) {
-        var panelId = tabs.find( ".ui-tabs-active" ).remove().attr( "aria-controls" );
-        $( "#" + panelId ).remove();
-        tabs.tabs( "refresh" );
-      }
-    });
-  });
-  </script>
 </head>
-<body>
 
+<body>
 <div class="container">
   <div class="panel panel-primary">
     <div class="panel heading">
@@ -155,5 +84,6 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/bootstrap.min.js"></script> 
+    <script src="js/myTabs.js"></script> 
 </body>
 </html>
