Ajax delete not working

--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
                     </div>
                     <div class="form-group col-xs-5">
                         <button type="submit" class="btn btn-lg btn-success">Add the Task</button>
-                        <button type="button" id="removecompleted" class="btn btn-lg btn-danger">Remove Completed</button>
+                        <button type="button" id="removecompleted" class="btn btn-lg btn-danger hidden">Remove Completed</button>
                     </div>
                 </form>
                     
