Final Project submission

--- a/project_crap.html
+++ b/project_crap.html
@@ -59,6 +59,7 @@
                     <fieldset class="ui-helper-reset">
                       <label for="tab_title">Title</label>
                       <input type="text" name="tab_title" id="tab_title" value="" class="ui-widget-content ui-corner-all" />
+<!--                      <textarea name="tab_content" id="tab_content" class="ui-widget-content ui-corner-all"></textarea> -->
                     </fieldset>
                   </form>
                 </div>
@@ -74,7 +75,7 @@
                   </ul>
                   <div id="tabs-1">
                   </div> <!-- end div "tabs-1" -->
-                    <div id="tabs-2">
+                  <div id="tabs-2">
                         <p>Automobile Tab Content</p> 
                   </div> <!-- end div "tabs-2" -->                
                   <div id="tabs-3">
@@ -83,7 +84,7 @@
                   <div id="tabs-4">
                         <p>HVAC Tab Content</p> 
                   </div> <!-- end div "tabs-4" -->                    
-                </div> <!-- end div tabs -->
+                </div> <!-- end div "tabs" -->
             </div> <!-- end panel-body -->
         </div> <!-- end panel-primary --> 
     </div> <!-- /.container --> 
